Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
Description
MySQL 5.7.29 includes a fix for avoiding some crashes in IndexPurge::next() in ALTER TABLE…IMPORT TABLESPACE:
Bug#29454828 ASSERTION ON IMPORT VIA TRANSPORTABLE TABLESPACE
The test case introduces some fault injection that does not appear to cover the changed functionality.
MariaDB should fix this in a better way, by replacing the btr_pcur_move_to_next_user_rec() call with equivalent code, and replacing the btr_pcur_move_to_next_page() call with code that will not kill the server, but return an error to the caller.
Ultimately, in MDEV-13542 we should make btr_pcur_move_to_next_user_rec() robust, and check the status in all callers.
Attachments
Issue Links
- blocks
-
MDEV-20931 ALTER...IMPORT can crash the server
-
- Closed
-
-
MDEV-21499 Merge new release of InnoDB 5.7.29 to 10.2
-
- Closed
-
- relates to
-
MDEV-13542 Crashing on a corrupted page is unhelpful
-
- Closed
-